tests/ui/type/type-ascription-with-fn-call.stderr
error: expected one of `.`, `;`, `?`, `}`, or an operator, found `:`
  --> $DIR/type-ascription-with-fn-call.rs:3:10
   |
LL |     f()  :
   |          ^ expected one of `.`, `;`, `?`, `}`, or an operator

error: aborting due to previous error

